swim_client/src/configuration/tests/resources/invalid/invalid-value.recon
@config{
    @client {
        buffer_size: "test"
    }
}